--- a/package.json
+++ b/package.json
@@ -8,16 +8,16 @@
 	"license": "MIT",
 	"private": false,
 	"devDependencies": {
-		"@poly-state/poly-state": "latest",
+		"@poly-state/poly-state": "^1.1.2",
 		"eslint": "^8.4.1",
 		"eslint-plugin-react-hooks": "^4.3.0",
-		"preact": "^10.6.4",
+		"preact": "^10.6.6",
 		"prettier": "^2.5.1",
 		"typescript": "^4.5.4"
 	},
 	"peerDependencies": {
-		"@poly-state/poly-state": "latest",
-		"preact": "^10.6.4"
+		"@poly-state/poly-state": "^1.1.2",
+		"preact": "^10.6.6"
 	},
 	"scripts": {
 		"build": "tsc",
