--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,6 @@
 		"moduleResolution": "Node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
-		"jsx": "react-jsx",
 		"outDir": "dist",
 		"sourceMap": false,
 		"declaration": true,
@@ -26,7 +25,10 @@
 		"strictFunctionTypes": true,
 		"strictPropertyInitialization": true,
 		"noFallthroughCasesInSwitch": true,
-		"pretty": true
+		"pretty": true,
+		"jsx": "preserve",
+		"jsxFactory": "h",
+		"jsxFragmentFactory": "Fragment"
 	},
 	"include": ["./src"]
 }
